Tweaked UI for displaying EEG data

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -42,3 +42,12 @@ a:hover {
   text-decoration: none;
   cursor: pointer;
 }
+
+.jspsych-content-wrapper {
+  width: 300px;
+}
+
+.jspsych-display-element {
+  width: 50% !important;
+}
+
