--- a/app/components/Home.css
+++ b/app/components/Home.css
@@ -1,6 +1,7 @@
 .container {
   position: absolute;
-  top: 30%;
+  top: 15%;
+  height: 100vh;
   left: 10px;
   text-align: center;
 }
@@ -12,3 +13,4 @@
 .container a {
   font-size: 1.4rem;
 }
+
