--- a/app/app.global.css
+++ b/app/app.global.css
@@ -7,7 +7,6 @@
 
 body {
   position: relative;
-  color: white;
   height: 100vh;
   background-color: #232c39;
   background-image: linear-gradient(45deg, rgba(0, 216, 255, 0.5) 10%, rgba(0, 1, 127, 0.7));
@@ -45,5 +44,9 @@ a:hover {
 
 .jspsych-display-element {
   width: 50% !important;
+}
+
+.ui.card {
+  width: auto;
 }
 
