--- a/app/app.global.css
+++ b/app/app.global.css
@@ -8,8 +8,7 @@
 body {
   position: relative;
   height: 100vh;
-  background-color: #232c39;
-  background-image: linear-gradient(45deg, rgba(0, 216, 255, 0.5) 10%, rgba(0, 1, 127, 0.7));
+  background: rgba(255,255,255,0.2);
   font-family: Lato, Helvetica Neue, serif;
   overflow-y: hidden;
 }
@@ -23,7 +22,7 @@ h2 {
 }
 
 p {
-  font-size: 24px;
+  font-size: 16px;
 }
 
 li {
@@ -47,6 +46,10 @@ a:hover {
 }
 
 .ui.card {
+  width: auto;
+}
+
+.ui.avatar.image {
   width: auto;
 }
 
