--- a/app/components/styles/common.css
+++ b/app/components/styles/common.css
@@ -1,18 +1,18 @@
-.experimentContainer {
+.mainContainer {
   position: absolute;
   top: 15%;
   height: 100vh;
   width: 100vw;
 }
 
-.container h2 {
+.mainContainer h2 {
   font-size: 5rem;
 }
 
-.container a {
+.mainContainer a {
   font-size: 1.4rem;
 }
 
-.homeButton {
-  margin: 30px;
+.inputDiv {
+  margin: 15px;
 }
