Tweaks to permit full experiment run with Emotiv

--- a/app/components/styles/topnavbar.css
+++ b/app/components/styles/topnavbar.css
@@ -2,7 +2,7 @@
   padding-top: 15px;
   width: 100vw;
   height: 75px;
-  background: #db2828;
+  background: #db2828e8;
   font-weight: 700;
   color: #fff;
 }
