--- a/app/app.global.css
+++ b/app/app.global.css
@@ -4,6 +4,7 @@
  */
 @import "~font-awesome/css/font-awesome.css";
 @import "~semantic-ui-css/semantic.min.css";
+@import "~jspsych-react/css/jspsych.css";
 
 body {
   position: relative;
