--- a/app/app.global.css
+++ b/app/app.global.css
@@ -94,9 +94,15 @@ img {
   background-color: #0b4d37;
 }
 
-ui.primary.button:active {
+.ui.primary.button:active {
   background-color: #0b4d37;
 }
+
+.ui.dimmer {
+  top: 60px !important;
+  background-color: #16996d;
+}
+
 /* Webview-related styles */
 
 #eegView {
