--- a/app/components/styles/connectmodal.css
+++ b/app/components/styles/connectmodal.css
@@ -1,6 +1,11 @@
 .connectModal {
   color: #fff;
   font-size: 18px !important;
+  width: 25% !important;
+}
+
+.connectModal a {
+  text-decoration: underline;
 }
 
 .connectHeader {
@@ -12,4 +17,30 @@
 
 .deviceItem {
   font-size: 18px !important;
+}
+
+.primaryButton {
+  font-size: 18px !important;
+  font-weight: normal !important;
+  color: #007c70 !important;
+  border: solid 2px #fff !important;
+  border-radius: 4px !important;
+  background-color: #fff !important;
+}
+
+.primaryButton:hover {
+  background-color: #e6f2f1 !important;
+}
+
+.secondaryButton {
+  font-size: 18px !important;
+  font-weight: normal !important;
+  color: #fff !important;
+  border: solid 2px #fff !important;
+  border-radius: 4px !important;
+  background-color: rgba(255, 255, 255, 0) !important;
+}
+
+.secondaryButton:hover {
+  background-color: #00635a !important;
 }
