Implemented UI and epic for naming and creating new workspaces

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -136,6 +136,10 @@ img {
   border-style: none !important;
 }
 
+.ui.modal > .actions {
+  border-style: none !important;
+}
+
 /* Webview-related styles */
 
 #eegView {
