--- a/app/components/styles/collect.css
+++ b/app/components/styles/collect.css
@@ -51,6 +51,15 @@
   background-color: #00635a !important;
 }
 
+.helpButton {
+  height: 44px !important;
+  width: 44px !important;
+  color: #fff !important;
+  background-color: #007c70 !important;
+  border-radius: 22px !important;
+  border: 2px solid #007c70 !important;
+}
+
 .greatSignal {
   color: #66b0a9;
 }
