--- a/app/components/styles/topnavbar.css
+++ b/app/components/styles/topnavbar.css
@@ -1,4 +1,6 @@
 .navContainer {
+  position: relative;
+  z-index: 999;
   height: 60px;
   background: #ffffff;
   box-shadow: 0 5px 16px 0 rgba(0, 0, 0, 0.09);
