--- a/app/components/styles/common.css
+++ b/app/components/styles/common.css
@@ -31,6 +31,15 @@
   text-align: center !important;
 }
 
+.descriptionContainer p {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.descriptionContainer button {
+  margin-right: 20px !important;
+}
+
 /* Secondary Nav related styles */
 
 .secondaryNavContainer {
