--- a/app/components/styles/secondarynav.css
+++ b/app/components/styles/secondarynav.css
@@ -7,14 +7,13 @@
 .secondaryNavSegment {
   display: flex !important;
   justify-content: center;
-  height: inherit;
-  font-size: 14px;
-  font-weight: bold;
-  line-height: 17px;
-  letter-spacing: 0.5px;
   border-style: solid;
   border-width: 0px;
   border-bottom-width: 4px;
+  font-size: 14px !important;
+  font-weight: bold;
+  line-height: 17px;
+  letter-spacing: 0.5px;
 }
 
 .inactiveSecondaryNavSegment {
