--- a/app/app.global.css
+++ b/app/app.global.css
@@ -82,7 +82,7 @@ img {
   color: #007c70 !important;
   border-radius: 4px;
   border: 2px solid #007c70;
-  background-color: #ffffff;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .ui.secondary.button:hover {
