Implemented loading of custom images; Lots of style tweaks

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -159,6 +159,10 @@ img {
   width: calc(100% - 350px);
 }
 
+.ui.selection.dropdown {
+  min-width: 50px !important;
+}
+
 /* Webview-related styles */
 
 #eegView {
