Wrapped up implementation of custom design screen

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -55,6 +55,10 @@ img {
   max-width: 100% !important;
 }
 
+button:active {
+  transform: scale(0.95) !important;
+}
+
 .jspsych-display-element {
   width: 100% !important;
 }
