--- a/app/components/styles/common.css
+++ b/app/components/styles/common.css
@@ -58,6 +58,11 @@
   margin-right: 20px !important;
 }
 
+.infoSegment {
+  padding: 0% !important;
+  font-size: 18px !important;
+}
+
 .closeButton {
   border: none !important;
   box-shadow: none !important;
