Prototype implementation of Run and Clean Screens

--- a/app/components/styles/collect.css
+++ b/app/components/styles/collect.css
@@ -32,6 +32,7 @@
 
 .preTestPushable {
   height: 100vh !important;
+  background: linear-gradient(#f9f9f9, #f0f0ff) !important;
 }
 
 .previewColumn {
