--- a/app/app.global.css
+++ b/app/app.global.css
@@ -53,7 +53,7 @@ a:hover {
 }
 
 img {
-  min-width: 100% !important;
+  max-width: 100% !important;
 }
 
 #jspsych-image-keyboard-response-stimulus {
@@ -221,4 +221,15 @@ button:active {
 .rc-slider-mark-text {
   font-size: 14px;
   margin-top: 10px;
+}
+
+/* HeadDiagram styles */
+
+.channelCircle {
+  fill: #fff;
+}
+
+.channelCircle:hover {
+  fill: #007c70;
+  cursor: pointer;
 }
