use generic name app

--- a/app/components/styles/common.css
+++ b/app/components/styles/common.css
@@ -40,7 +40,7 @@
   line-height: 17px;
 }
 
-.brainwavesLogo {
+.appLogo {
   height: auto;
   width: 250px;
   background-color: #007c70 !important;
