show behavior data

--- a/app/components/styles/common.css
+++ b/app/components/styles/common.css
@@ -67,6 +67,11 @@
   font-size: 18px !important;
 }
 
+.plotSegment {
+  padding: 20% !important;
+  font-size: 18px !important;
+}
+
 .closeButton {
   border: none !important;
   box-shadow: none !important;
