adding an explore EEG screen
Co-authored-by: jdpigeon <morrisondano@gmail.com>

--- a/app/app.global.css
+++ b/app/app.global.css
@@ -171,7 +171,7 @@ button:active {
 }
 
 .ui.dimmer {
-  top: 60px !important;
+  /* top: 60px !important; */
   background-image: linear-gradient(#43968d, #007c70);
 }
 
