--- a/app/components/styles/common.css
+++ b/app/components/styles/common.css
@@ -106,25 +106,38 @@
   height: 100%;
 }
 
-.helpButton {
-  height: 44px !important;
-  width: 44px !important;
-  color: #fff !important;
-  background-color: #007c70 !important;
-  border-radius: 22px !important;
-}
-
 .helpSidebar {
   height: inherit;
+}
+
+.helpSidebar i {
+  color: #64c9e2;
 }
 
 .helpHeader {
   margin-bottom: 18px !important;
 }
 
+.helpMenuItem {
+  font-size: 18px !important;
+  padding: 5px !important;
+}
+
 .helpContent {
   font-size: 18px !important;
   height: 80%;
+}
+
+.helpButton {
+  height: 44px !important;
+  width: 44px !important;
+  color: #fff !important;
+  background-color: #007c70 !important;
+  border-radius: 22px !important;
+  border: 2px solid #007c70 !important;
+  display: flex;
+  justify-content: flex-end;
+  font-size: initial !important;
 }
 
 .externalLinks {
