--- a/app/components/styles/common.css
+++ b/app/components/styles/common.css
@@ -23,7 +23,7 @@
 }
 
 .contentGrid {
-  height: 95%;
+  height: 90%;
 }
 
 .overviewImage {
@@ -357,8 +357,7 @@
   align-content: baseline;
   grid-template-columns: 1fr;
   overflow-y: scroll;
-  min-height: 500px;
-  max-height: 500px;
+  max-height: 50vh;
 }
 
 .EEGToggle {
@@ -374,4 +373,10 @@
 .disconnectButtonContainer {
   display: flex;
   justify-content: flex-end;
+}
+
+.trialsTopInfoBar {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 10px;
 }
